added a new retromod scoring system and fixed security bugs and added alot of new shims and polifils